--- a/docs/docs/cmd/entra/pim/pim-role-assignment-add.mdx
+++ b/docs/docs/cmd/entra/pim/pim-role-assignment-add.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # entra pim role assignment add
 
-Request activation of an Entra ID role assignment for a user or group.
+Request activation of an Entra role assignment for a user or group.
 
 ## Usage
 
@@ -37,7 +37,7 @@ m365 entra pim role assignment add [options]
 : Id of the administrative unit representing the scope of the assignment. Specify either `administrativeUnitId` or `applicationId`. If not specified, default scope will be tenant-wide.
 
 `--applicationId [applicationId]`
-: Object id of the application representing the scope of the assignment. Specify either `administrativeUnitId` or `applicationId`. If not specified, default scope will be tenant-wide.
+: Object Id of the application representing the scope of the assignment. Specify either `administrativeUnitId` or `applicationId`. If not specified, default scope will be tenant-wide.
 
 `-j, --justification [justification]`
 : An optional justification message.
@@ -46,10 +46,13 @@ m365 entra pim role assignment add [options]
 : When the assignment should start. If left out, the assignment will start from the current time.
 
 `-e, --endDateTime [endDateTime]`
-: When the assignment should end. Specify either `duration` or `endDateTime`.
+: When the assignment should end. Specify either `duration`, `endDateTime` or `noExpiration`.
 
 `-d, --duration [duration]`
-: How long the assignment should last. Write in ISO 8601 format for durations: PT3H for 3 hours.
+: How long the assignment should last. Write in ISO 8601 format for durations: PT3H for 3 hours. Specify either `duration`, `endDateTime` or `noExpiration`.
+
+`--noExpiration [noExpiration]`
+: If specified, the role assignment will never expire. Specify either `duration`, `endDateTime` or `noExpiration`.
 
 `--ticketNumber [ticketNumber]`
 : Optional ticket number value to communicate with the request.
@@ -64,52 +67,58 @@ m365 entra pim role assignment add [options]
 
 :::info
 
-To use this command you must be **Privileged Role Administrator**.
+When activating a role for other users, you must be **Privileged Role Administrator**.
 
 :::
 
 ## Examples
 
-Request activation of the SharePoint Administrator Entra ID role assignment for the current user.
+Request activation of the SharePoint Administrator Entra role assignment for the current user.
 
 ```sh
 m365 entra pim role assignment add --roleDefinitionName 'SharePoint Administrator'
 ```
 
-Request activation of an Entra ID role assignment for the current user.
+Request activation of an Entra role assignment for the current user.
 
 ```sh
 m365 entra pim role assignment add --roleDefinitionId 'f1417aa3-bf0b-4cc5-a845-a0b2cf11f690'
 ```
 
-Request activation of an Entra ID role assignment for the current user with a justification and max duration of 4 hours.
+Request activation of an Entra role assignment for the current user with a justification and max duration of 4 hours.
 
 ```sh
 m365 entra pim role assignment add --roleDefinitionId 'f1417aa3-bf0b-4cc5-a845-a0b2cf11f690' --justification 'Need Global Admin to release application xyz to production' --duration 'PT4H'
 ```
 
-Request activation of an Entra ID role assignment for a specified user with tenant scope.
+Request activation of an Entra role assignment for a specified user with tenant scope.
 
 ```sh
 m365 entra pim role assignment add --roleDefinitionId 'f1417aa3-bf0b-4cc5-a845-a0b2cf11f690' --userId '3488d6b8-6b2e-41c3-9583-1991205323c2'
 ```
 
-Request activation of the User Administrator Entra ID role assignment for a specified group with administrative unit scope.
+Request activation of the User Administrator Entra role assignment for a specified group with administrative unit scope.
 
 ```sh
 m365 entra pim role assignment add --roleDefinitionName 'User Administrator' --groupId '3488d6b8-6b2e-41c3-9583-1991205323c2' --administrativeUnitId '03c4c9dc-6f0c-4c4f-a4e6-0c9ed80f54c7'
 ```
 
-Request activation of the Application Administrator Entra ID role assignment for a specified group with scope to a specific application.
+Request activation of the Application Administrator Entra role assignment for a specified group with scope to a specific application.
 
 ```sh
 m365 entra pim role assignment add --roleDefinitionName 'Application Administrator' --groupName 'Applications admins' --applicationId '03c4c9dc-6f0c-4c4f-a4e6-0c9ed80f54c7'
 ```
 
-Request activation of an Entra ID role assignment for a specific period of two days.
+Request activation of an Entra role assignment for a specific period of two days.
 
 ```sh
 m365 entra pim role assignment add --roleDefinitionName 'Global Administrator' --userName 'admin-john@contoso.com' --startDateTime '2024-01-10T09:00:00Z' --endDateTime '2024-01-11T17:00:00Z'
+```
+
+Request activation of an Entra role assignment with no expiration.
+
+```sh
+m365 entra pim role assignment add --roleDefinitionName 'Global Administrator' --userName 'admin-john@contoso.com' --noExpiration
 ```
 
 ## Response
