Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,23 @@ sidebar_position: 4
 
 # Release notes
 
+## v7.7.0 (beta)
+
+### New commands
+
+**Entra ID:**
+
+- [entra pim role assignment add](../cmd/entra/pim/pim-role-assignment-add.mdx) - requests activation of an Entra role assignment for a user or group [#5766](https://github.com/pnp/cli-microsoft365/issues/5766)
+- [entra pim role assignment list](../cmd/entra/pim/pim-role-assignment-list.mdx) - retrieves a list of Entra role assignments for a user or group. [#5782](https://github.com/pnp/cli-microsoft365/issues/5782)
+
+**SharePoint:**
+
+- [spo contenttype sync](../cmd/spo/contenttype/contenttype-sync.mdx) - adds a published content type from the content type hub to a site or syncs its latest changes [#5551](https://github.com/pnp/cli-microsoft365/issues/5551)
+
+### Changes
+
+- added allowPublicClientFlow option to 'entra app add/set' commands [#5870](https://github.com/pnp/cli-microsoft365/issues/5870)
+
 ## [v7.6.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.6.0)
 
 ### New commands
