--- a/docs/docs/cmd/spo/site/site-remove.mdx
+++ b/docs/docs/cmd/spo/site/site-remove.mdx
@@ -14,61 +14,51 @@ m365 spo site remove [options]
 
 ```md definition-list
 `-u, --url <url>`
-: URL of the site to remove
+: URL of the site.
 
 `--skipRecycleBin`
-: Set to directly remove the site without moving it to the Recycle Bin
+: Set to directly remove the site without moving it to the recycle bin.
 
 `--fromRecycleBin`
-: Set to remove the site from the Recycle Bin
+: Set to remove the site from the recycle bin.
 
 `--wait`
-: Wait for the site to be removed before completing the command
+: (deprecated) Wait for the site to be removed before completing the command.
 
 `-f, --force`
-: Don't prompt for confirming removing the site
+: Don't prompt for confirmation.
 ```
 
 <Global />
 
 ## Remarks
 
-Deleting a site collection is by default asynchronous and depending on the current state of Microsoft 365, might take up to few minutes. If you're building a script with steps that require the site to be fully deleted, you should use the `--wait` flag. When using this flag, the `spo site remove` command will keep running until it received confirmation from Microsoft 365 that the site has been fully deleted.
-
-If the site which you have selected to remove is groupified (Modern Team Site) and group exists, flags `--skipRecycleBin` and `--wait` will not be applicable. If the linked group still exists in the deleted groups, the site won't be removed. If the linked group is permanently deleted, the site will be removed like any classic site (except that flag `--wait` only will still not be applicable).
-
 If the argument `--fromRecycleBin` is passed, the selected site will be permanently removed even if it's a groupified one.
 
 :::info
 
-To use this command you have to have permissions to access the tenant admin site.
+To use this command you must be a Global or SharePoint administrator.
 
 :::
 
 ## Examples
 
-Remove the specified site and place it in the Recycle Bin
+Remove the specified site and place it in the recycle bin.
 
 ```sh
 m365 spo site remove --url https://contoso.sharepoint.com/sites/demosite
 ```
 
-Remove the site without moving it to the Recycle Bin
+Remove the site without moving it to the recycle bin.
 
 ```sh
 m365 spo site remove --url https://contoso.sharepoint.com/sites/demosite --skipRecycleBin
 ```
 
-Remove the previously deleted site from the Recycle Bin
+Remove the previously deleted site from the recycle bin.
 
 ```sh
 m365 spo site remove --url https://contoso.sharepoint.com/sites/demosite --fromRecycleBin
-```
-
-Remove the site without moving it to the Recycle Bin and wait for completion
-
-```sh
-m365 spo site remove --url https://contoso.sharepoint.com/sites/demosite --wait --skipRecycleBin
 ```
 
 ## Response
