Fixes 'spo site apppermission remove' output

--- a/docs/docs/cmd/spo/site/site-apppermission-add.mdx
+++ b/docs/docs/cmd/spo/site/site-apppermission-add.mdx
@@ -32,7 +32,7 @@ m365 spo site apppermission add [options]
 
 ## Remarks
 
-To set permissions, specify at minimum either `appId` or `addDisplayName`. For best performance specify both values to avoid extra lookup.
+To set permissions, specify at minimum either `appId` or `appDisplayName`. For best performance specify both values to avoid extra lookup.
 
 ## Example
 
