--- a/docs/docs/cmd/entra/app/app-permission-list.mdx
+++ b/docs/docs/cmd/entra/app/app-permission-list.mdx
@@ -28,7 +28,7 @@ m365 aad app permission list [options]
 : Display name of the Entra application registration to add the API permissions to. Specify either `appId`, `appName` or `appObjectId`.
 
 `--appObjectId [appObjectId]`
-: Object ID of the Entra application registrationn to retrieve the permissions for. Specify either `appId`, `appName` or `appObjectId`.
+: Object ID of the Entra application registration to retrieve the permissions for. Specify either `appId`, `appName` or `appObjectId`.
 
 `--type [type]`
 : The type of permissions to retrieve. Allowed values: `delegated`, `application`, `all`. Defaults to `all`.
