Fixes 'spo page set' throwing error when no option specified. Closes #5938

--- a/docs/docs/cmd/spo/page/page-set.mdx
+++ b/docs/docs/cmd/spo/page/page-set.mdx
@@ -44,7 +44,7 @@ m365 spo page set [options]
 : The title to set for the page.
 
 `--content [content]`
-: JSON string containing page content
+: JSON string containing page content.
 ```
 
 <Global />
