Renamed container type to containertype

--- a/docs/docs/cmd/spe/containertype/containertype-add.mdx
+++ b/docs/docs/cmd/spe/containertype/containertype-add.mdx
@@ -2,14 +2,14 @@ import Global from '/docs/cmd/_global.mdx';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-# spo container type add
+# spe containertype add
 
-Creates a new Container Type for your app
+Creates a new Containertype for your app
 
 ## Usage
 
 ```sh
-m365 spe container type add [options]
+m365 spe containertype add [options]
 ```
 
 ## Options
@@ -47,13 +47,13 @@ You can only create one Trial container per tenant, a single application registr
 Adds a new trial container type
 
 ```sh
-m365 spe container type add --name 'trial container' --applicationId '1b3b8660-9a44-4a7c-9c02-657f3ff5d5ac' --trial
+m365 spe containertype add --name 'trial container' --applicationId '1b3b8660-9a44-4a7c-9c02-657f3ff5d5ac' --trial
 ```
 
 Adds a new container type using a Standard container type.
 
 ```sh
-m365 spe container type add --name 'standard container' --applicationId '1b3b8660-9a44-4a7c-9c02-657f3ff5d5ac' --azureSubscriptionId 'f08575e2-36c4-407f-a891-eabae23f66bc' --region 'West Europe' --resourceGroup 'Standard group'
+m365 spe containertype add --name 'standard container' --applicationId '1b3b8660-9a44-4a7c-9c02-657f3ff5d5ac' --azureSubscriptionId 'f08575e2-36c4-407f-a891-eabae23f66bc' --region 'West Europe' --resourceGroup 'Standard group'
 ```
 
 ## Response
