Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -20,6 +20,12 @@ sidebar_position: 4
 ### Changes
 
 - added allowPublicClientFlow option to 'entra app add/set' commands [#5870](https://github.com/pnp/cli-microsoft365/issues/5870)
+- extended [spfx project upgrade](../cmd/spfx/project/project-upgrade.mdx) with support for v1.19.0-beta.0 [#5942](https://github.com/pnp/cli-microsoft365/issues/5942)
+- extended [spfx doctor](../cmd/spfx/spfx-doctor.mdx) with support for v1.19.0-beta.0 [#5942](https://github.com/pnp/cli-microsoft365/issues/5942)
+- extended [spfx project doctor](../cmd/spfx/project/project-doctor.mdx) with support for v1.19.0-beta.0 [#5942](https://github.com/pnp/cli-microsoft365/issues/5942)
+- fixed [spo page set](../cmd/spo/page/page-set.mdx) to throw an error when no options to update are specified [#5938](https://github.com/pnp/cli-microsoft365/issues/5938)
+- enhanced [spo site hubsite connect](../cmd/spo/site/site-hubsite-connect.mdx) and [spo site hubsite disconnect](../cmd/spo/site/site-hubsite-disconnect.mdx) to drop request digest value [#5940](https://github.com/pnp/cli-microsoft365/issues/5940)
+- enhanced option validation order [#5915](https://github.com/pnp/cli-microsoft365/issues/5915)
 
 ## [v7.6.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.6.0)
 
