First small remarks from Adam

--- a/docs/docs/cmd/spfx/spfx-doctor.mdx
+++ b/docs/docs/cmd/spfx/spfx-doctor.mdx
@@ -77,6 +77,12 @@ m365 spfx doctor --env sp2019 --output text
 Verify if your environment meets the requirements to work with SharePoint Framework v1.11.0
 
 ```sh
+m365 spfx doctor --spfxVersion 1.11.0 --output text
+```
+
+Verify if your environment meets the requirements to work with SharePoint Framework v1.11.0 and outputs it in a JSON format.
+
+```sh
 m365 spfx doctor --spfxVersion 1.11.0 --output json
 ```
 
