Adds command 'spo contenttype field list'. Closes #5677

--- a/docs/docs/cmd/spo/field/field-list.mdx
+++ b/docs/docs/cmd/spo/field/field-list.mdx
@@ -116,9 +116,9 @@ m365 spo field list --webUrl https://contoso.sharepoint.com/sites/contoso-sales 
   <TabItem value="Text">
 
   ```text
-  Id                                    Title                                    Group                                   Hidden
-  ------------------------------------  ---------------------------------------  --------------------------------------  ------
-  5ee2dd25-d941-455a-9bdb-7f2c54aed11b  Start date-time                          PnP Columns                             false
+  Id                                    Title            InternalName           Hidden
+  ------------------------------------  ---------------  ---------------------  ------
+  5ee2dd25-d941-455a-9bdb-7f2c54aed11b  Start date-time  PnPAlertStartDateTime  false
   ```
 
   </TabItem>
