Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -26,6 +26,8 @@ sidebar_position: 4
 - fixed [spo page set](../cmd/spo/page/page-set.mdx) to throw an error when no options to update are specified [#5938](https://github.com/pnp/cli-microsoft365/issues/5938)
 - enhanced [spo site hubsite connect](../cmd/spo/site/site-hubsite-connect.mdx) and [spo site hubsite disconnect](../cmd/spo/site/site-hubsite-disconnect.mdx) to drop request digest value [#5940](https://github.com/pnp/cli-microsoft365/issues/5940)
 - enhanced option validation order [#5915](https://github.com/pnp/cli-microsoft365/issues/5915)
+- refactored spo page set and spo page add to use util instead of calling other command [#5300](https://github.com/pnp/cli-microsoft365/issues/5300)
+- fixed 'spo site apppermission remove' output [#5958](https://github.com/pnp/cli-microsoft365/pull/5958)
 
 ## [v7.6.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.6.0)
 
