--- a/docs/docs/cmd/spe/containertype/containertype-add.mdx
+++ b/docs/docs/cmd/spe/containertype/containertype-add.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # spe containertype add
 
-Creates a new Containertype for your app
+Creates a new Container Type for your app
 
 ## Usage
 
@@ -19,19 +19,18 @@ m365 spe containertype add [options]
 : Container type name.
 
 `--applicationId <applicationId>`
-: Application ID of the Microsoft Entra ID app that will be the owner of the container type.
+: Application ID of the Microsoft Entra ID app that will be the owner of the Container Type.
 
 `--trial`
-: Specify if the container type should be a trial.
+: Specify if the Container Type should be a trial.
 
 `--azureSubscriptionId [azureSubscriptionId]`
-: Azure Subscription Id. Required unless on a trial.
+: Azure Subscription Id. Required unless the `trail` option was specified.
 
 `--resourceGroup [resourceGroup]`
-: Azure Resource group for billing. Required unless on a trial.
-
+: Azure Resource group for billing. Required unless the `trail` option was specified.
 `--region [region]`
-: Region. Required unless on a trial.
+: Region. Required unless the `trail` option was specified.
 ```
 
 <Global />
@@ -39,18 +38,18 @@ m365 spe containertype add [options]
 ## Remarks
 
 :::note
-You can only create one Trial container per tenant, a single application registration can only contain one container and a tenant can contain a maximum of five containers in total.
+You can only create one Trial Container per tenant, a single application registration can only contain one Container and a tenant can contain a maximum of five Containers in total.
 :::
 
 ## Examples
 
-Adds a new trial container type
+Adds a new trial Container Type
 
 ```sh
 m365 spe containertype add --name 'trial container' --applicationId '1b3b8660-9a44-4a7c-9c02-657f3ff5d5ac' --trial
 ```
 
-Adds a new container type using a Standard container type.
+Adds a new Container Type using a standard Container Type.
 
 ```sh
 m365 spe containertype add --name 'standard container' --applicationId '1b3b8660-9a44-4a7c-9c02-657f3ff5d5ac' --azureSubscriptionId 'f08575e2-36c4-407f-a891-eabae23f66bc' --region 'West Europe' --resourceGroup 'Standard group'
@@ -106,7 +105,7 @@ m365 spe containertype add --name 'standard container' --applicationId '1b3b8660
   <TabItem value="Markdown">
 
   ```md
-  # spe container type add --name 'Standard container' --applicationId '1b3b8660-9a44-4a7c-9c02-657f3ff5d5ac' --azureSubscriptionId 'f08575e2-36c4-407f-a891-eabae23f66bc' --region 'West Europe' --resourceGroup 'Standard group'
+  # spe containertype add --name 'Standard container' --applicationId '1b3b8660-9a44-4a7c-9c02-657f3ff5d5ac' --azureSubscriptionId 'f08575e2-36c4-407f-a891-eabae23f66bc' --region 'West Europe' --resourceGroup 'Standard group'
 
   Date: 11/03/2024
 
