Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -28,6 +28,7 @@ sidebar_position: 4
 - enhanced option validation order [#5915](https://github.com/pnp/cli-microsoft365/issues/5915)
 - refactored spo page set and spo page add to use util instead of calling other command [#5300](https://github.com/pnp/cli-microsoft365/issues/5300)
 - fixed 'spo site apppermission remove' output [#5958](https://github.com/pnp/cli-microsoft365/pull/5958)
+- fixed prompt issue on macOS [#5957](https://github.com/pnp/cli-microsoft365/pull/5957)
 
 ## [v7.6.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.6.0)
 
