--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -29,6 +29,8 @@ sidebar_position: 4
 - refactored spo page set and spo page add to use util instead of calling other command [#5300](https://github.com/pnp/cli-microsoft365/issues/5300)
 - fixed 'spo site apppermission remove' output [#5958](https://github.com/pnp/cli-microsoft365/pull/5958)
 - fixed prompt issue on macOS [#5957](https://github.com/pnp/cli-microsoft365/pull/5957)
+- updated 'aad user list' with 'type' option [#5644](https://github.com/pnp/cli-microsoft365/pull/5644)
+- enhanced cli warning when non-existing command is called [#5768](https://github.com/pnp/cli-microsoft365/issues/5768)
 
 ## [v7.6.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.6.0)
 
