Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -17,6 +17,10 @@ sidebar_position: 4
 
 - [spo contenttype sync](../cmd/spo/contenttype/contenttype-sync.mdx) - adds a published content type from the content type hub to a site or syncs its latest changes [#5551](https://github.com/pnp/cli-microsoft365/issues/5551)
 
+**SharePoint Embedded:**
+
+- [spe containertype add](../cmd/spe/containertype/containertype-add.mdx) - creates a new Container Type for your app [#5767](https://github.com/pnp/cli-microsoft365/issues/5767)
+
 ### Changes
 
 - added allowPublicClientFlow option to 'entra app add/set' commands [#5870](https://github.com/pnp/cli-microsoft365/issues/5870)
@@ -31,6 +35,7 @@ sidebar_position: 4
 - fixed prompt issue on macOS [#5957](https://github.com/pnp/cli-microsoft365/pull/5957)
 - updated 'aad user list' with 'type' option [#5644](https://github.com/pnp/cli-microsoft365/pull/5644)
 - enhanced cli warning when non-existing command is called [#5768](https://github.com/pnp/cli-microsoft365/issues/5768)
+- enhanced 'spfx doctor' command with 'json' output [#4212](https://github.com/pnp/cli-microsoft365/issues/4212)
 
 ## [v7.6.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.6.0)
 
