--- a/docs/docs/cmd/login.mdx
+++ b/docs/docs/cmd/login.mdx
@@ -48,7 +48,7 @@ m365 login [options]
 `--connectionName [connectionName]`
 : Specify an optional name to make switching between connections easier.
 
-`--ensure [ensure]`
+`--ensure`
 : Ensures that the user is signed in. if the user isn't signed in, it initiates the login flow
 ```
 
