New command: search

--- a/docs/docs/cmd/search.mdx
+++ b/docs/docs/cmd/search.mdx
@@ -74,7 +74,7 @@ m365 search --scopes 'listItem, site' --query 'accountt' --enableSpellingSuggest
 Search for file report.xlsl in specific folder of user personal OneDrive
 
 ```sh
-m365 search --scopes 'driveItem' --query 'filename:SyncCalendars.xlsx AND path:\"https://contoso-my.sharepoint.com/personal/john.doe_contoso_com/Documents/Reports/2024\"'
+m365 search --scopes 'driveItem' --query 'filename:report.xlsl AND path:\"https://contoso-my.sharepoint.com/personal/john.doe_contoso_com/Documents/Reports/2024\"'
 ```
 
 Search for all sites
