--- a/docs/docs/cmd/entra/m365group/m365group-add.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-add.mdx
@@ -22,37 +22,37 @@ m365 aad m365group add [options]
 
 ```md definition-list
 `-n, --displayName <displayName>`
-: Display name for the Microsoft 365 Group
+: Display name for the Microsoft 365 Group.
 
 `-m, --mailNickname <mailNickname>`
-: Name to use in the group e-mail (part before the `@`)
+: Name to use in the group e-mail (part before the `@`).
 
 `-d, --description [description]`
-: Description for the Microsoft 365 Group
+: Description for the Microsoft 365 Group.
 
 `--owners [owners]`
-: Comma-separated list of Microsoft 365 Group owners
+: Comma-separated list of Microsoft 365 Group owners.
 
 `--members [members]`
-: Comma-separated list of Microsoft 365 Group members
+: Comma-separated list of Microsoft 365 Group members.
 
 `--visibility [visibility]`
 : Specifies the group join policy and group content visibility for groups. Allowed values: `Private`, `Public`, or `HiddenMembership`. Defaults to `Public`.
 
 `--allowMembersToPost [allowMembersToPost]`
-: Set if only group members should be able to post conversations to the group
+: Set if only group members should be able to post conversations to the group.
 
 `--hideGroupInOutlook [hideGroupInOutlook]`
-: Set to hide the group in Outlook experiences
+: Set to hide the group in Outlook experiences.
 
 `--subscribeNewGroupMembers [subscribeNewGroupMembers]`
-: Set to subscribe all new group members to receive group conversation emails when new messages are posted in the group
+: Set to subscribe all new group members to receive group conversation emails when new messages are posted in the group.
 
 `--welcomeEmailDisabled [welcomeEmailDisabled]`
-: Set to not send welcome emails to new group members
+: Set to not send welcome emails to new group members.
 
 `-l, --logoPath [logoPath]`
-: Local path to the image file to use as group logo
+: Local path to the image file to use as group logo.
 ```
 
 <Global />
@@ -77,22 +77,22 @@ HiddenMembership | Owner permission is needed to join the group. Guest users can
 Create a public Microsoft 365 Group.
 
 ```sh
-m365 entra m365group add --displayName Finance --description "This is the Contoso Finance Group. Please come here and check out the latest news, posts, files, and more." --mailNickname finance
+m365 entra m365group add --displayName Finance --mailNickname finance
 ```
 
 Create a private Microsoft 365 Group.
 
 ```sh
-m365 entra m365group add --displayName Finance --description "This is the Contoso Finance Group. Please come here and check out the latest news, posts, files, and more." --mailNickname finance --visibility Private
+m365 entra m365group add --displayName Finance --mailNickname finance --visibility Private
 ```
 
-Create a public Microsoft 365 Group and set specified users as its owners.
+Create a public Microsoft 365 Group with description and set specified users as its owners.
 
 ```sh
 m365 entra m365group add --displayName Finance --description "This is the Contoso Finance Group. Please come here and check out the latest news, posts, files, and more." --mailNickname finance --owners "DebraB@contoso.onmicrosoft.com,DiegoS@contoso.onmicrosoft.com"
 ```
 
-Create a public Microsoft 365 Group and set specified users as its members.
+Create a public Microsoft 365 Group with description and set specified users as its members.
 
 ```sh
 m365 entra m365group add --displayName Finance --description "This is the Contoso Finance Group. Please come here and check out the latest news, posts, files, and more." --mailNickname finance --members "DebraB@contoso.onmicrosoft.com,DiegoS@contoso.onmicrosoft.com"
@@ -101,31 +101,31 @@ m365 entra m365group add --displayName Finance --description "This is the Contos
 Create a public Microsoft 365 Group and allow only group members to be able to post conversations to the group.
 
 ```sh
-m365 entra m365group add --displayName Finance --description "This is the Contoso Finance Group. Please come here and check out the latest news, posts, files, and more." --mailNickname finance --allowMembersToPost
+m365 entra m365group add --displayName Finance --mailNickname finance --allowMembersToPost
 ```
 
 Create a public Microsoft 365 Group and hide it from the Outlook experiences (web and client).
 
 ```sh
-m365 entra m365group add --displayName Finance --description "This is the Contoso Finance Group. Please come here and check out the latest news, posts, files, and more." --mailNickname finance --hideGroupInOutlook
+m365 entra m365group add --displayName Finance --mailNickname finance --hideGroupInOutlook
 ```
 
 Create a public Microsoft 365 Group and subscribe all new group members to receive group conversation emails when new messages are posted in the group.
 
 ```sh
-m365 entra m365group add --displayName Finance --description "This is the Contoso Finance Group. Please come here and check out the latest news, posts, files, and more." --mailNickname finance --subscribeNewGroupMembers
+m365 entra m365group add --displayName Finance --mailNickname finance --subscribeNewGroupMembers
 ```
 
 Create a public Microsoft 365 Group and set to not send welcome emails to new group members.
 
 ```sh
-m365 entra m365group add --displayName Finance --description "This is the Contoso Finance Group. Please come here and check out the latest news, posts, files, and more." --mailNickname finance --welcomeEmailDisabled
+m365 entra m365group add --displayName Finance --mailNickname finance --welcomeEmailDisabled
 ```
 
 Create a public Microsoft 365 Group and set its logo.
 
 ```sh
-m365 entra m365group add --displayName Finance --description "This is the Contoso Finance Group. Please come here and check out the latest news, posts, files, and more." --mailNickname finance --logoPath images/logo.png
+m365 entra m365group add --displayName Finance --mailNickname finance --logoPath images/logo.png
 ```
 
 ## Response
