Comments from Milan

--- a/docs/docs/cmd/outlook/message/message-list.mdx
+++ b/docs/docs/cmd/outlook/message/message-list.mdx
@@ -38,7 +38,7 @@ m365 outlook message list [options]
 
 ## Examples
 
-List all messages from a folder with the specified name received between within a specific time frame.
+List all messages from a folder with the specified name received within a specific time frame.
 
 ```sh
 m365 outlook message list --folderName Archive --startTime 2023-12-16T18:28:48.6964197Z --endTime 2024-02-01
