--- a/docs/docs/cmd/flow/run/run-list.mdx
+++ b/docs/docs/cmd/flow/run/run-list.mdx
@@ -51,7 +51,7 @@ If the environment with the name you specified doesn't exist, you will get the `
 
 If the Microsoft Flow with the name you specified doesn't exist, you will get the `The caller with object id 'abc' does not have permission for connection 'xyz' under Api 'shared_logicflows'.` error.
 
-When using `--withTrigger`, extra requests will get fired for each retrieved flow run. This has impact on the time the command takes to run.
+When using `--withTrigger`, extra requests will get fired for each retrieved flow run. This has an impact on the time the command takes to run.  
 
 ## Examples
 
@@ -61,10 +61,10 @@ List runs of the specified Microsoft Flow.
 m365 flow run list --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --flowName 5923cb07-ce1a-4a5c-ab81-257ce820109a
 ```
 
-List runs of the specified Microsoft Flow with a specific status including the trigger information.
+List runs of the specified Microsoft Flow with a specific status
 
 ```sh
-m365 flow run list --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --flowName 5923cb07-ce1a-4a5c-ab81-257ce820109a --status Running --withTrigger
+m365 flow run list --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --flowName 5923cb07-ce1a-4a5c-ab81-257ce820109a --status Running
 ```
 
 List runs of the specified Microsoft Flow between a specific time range.
@@ -77,6 +77,12 @@ List runs of the specified Microsoft Flow owned by another user.
 
 ```sh
 m365 flow run list --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --flowName 5923cb07-ce1a-4a5c-ab81-257ce820109a --asAdmin
+```
+
+List runs of the specified Microsoft Flow with the trigger information.
+
+```sh
+m365 flow run list --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --flowName 5923cb07-ce1a-4a5c-ab81-257ce820109a --withTrigger
 ```
 
 ## Response
