Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,17 @@ sidebar_position: 4
 
 # Release notes
 
+## v7.8.0 (beta)
+
+### New commands
+
+### Changes
+
+- refactored spo util codebase to async/await [#5079](https://github.com/pnp/cli-microsoft365/issues/5079)
+- added web as possible choice for setting helpTarget [#4037](https://github.com/pnp/cli-microsoft365/issues/4037)
+- updated workflow actions [#5978](https://github.com/pnp/cli-microsoft365/issues/5978)
+- enhanced 'flow run list' with 'withTrigger' option [#5160](https://github.com/pnp/cli-microsoft365/issues/5160)
+
 ## [v7.7.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.7.0)
 
 ### New commands
