New command: entra group user set

--- a/docs/docs/cmd/entra/group/group-user-set.mdx
+++ b/docs/docs/cmd/entra/group/group-user-set.mdx
@@ -20,7 +20,7 @@ m365 entra group user set [options]
 : The display name of the Entra ID group. Specify `groupId` or `groupDisplayName` but not both.
 
 `--ids [ids]`
-: Entra ID IDs of users. You can also pass a comma-separated list of IDs. Specify either `ids` or `userNames` but not both.
+: Comma-separated list of user IDs. Specify either `ids` or `userNames` but not both.
 
 `--userNames [userNames]`
 : The user principal names of users. You can also pass a comma-separated list of UPNs. Specify either `ids` or `userNames` but not both.
