--- a/docs/docs/cmd/entra/multitenant/multitenant-get.mdx
+++ b/docs/docs/cmd/entra/multitenant/multitenant-get.mdx
@@ -5,7 +5,7 @@ import TabItem from '@theme/TabItem';
 
 # entra multitenant get
 
-Gets a detail about the multitenant organization
+Gets properties of the multitenant organization
 
 ## Usage
 
@@ -27,7 +27,7 @@ To use this command you must be at least **Security Administrator**.
 
 ## Examples
 
-Get a detail about the multitenant organization
+Gets properties of the multitenant organization
 
 ```sh
 m365 entra multitenant get
