Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -14,6 +14,12 @@ sidebar_position: 4
 - added web as possible choice for setting helpTarget [#4037](https://github.com/pnp/cli-microsoft365/issues/4037)
 - updated workflow actions [#5978](https://github.com/pnp/cli-microsoft365/issues/5978)
 - enhanced 'flow run list' with 'withTrigger' option [#5160](https://github.com/pnp/cli-microsoft365/issues/5160)
+- refactors importing of chalk [#6026](https://github.com/pnp/cli-microsoft365/issues/6026)
+- fixed bug while removing team sites for [spo site remove](../cmd/spo/site/site-remove.mdx) command [#5218](https://github.com/pnp/cli-microsoft365/issues/5218)
+- fixed spinner showing in update notification [#6020](https://github.com/pnp/cli-microsoft365/issues/6020)
+- fixed [setup](../cmd/setup.mdx) command for setting wrong config key in interactive mode [#5951](https://github.com/pnp/cli-microsoft365/issues/5951)
+- enhanced [entra m365group add](../cmd/entra/m365group/m365group-add.mdx) command by making option 'description' optional [#5930](https://github.com/pnp/cli-microsoft365/issues/5930)
+- enhanced [outlook message list](../cmd/outlook/message/message-list.mdx) command extra options [#5872](https://github.com/pnp/cli-microsoft365/issues/5872)
 
 ## [v7.7.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.7.0)
 
@@ -22,7 +28,7 @@ sidebar_position: 4
 **Entra ID:**
 
 - [entra pim role assignment add](../cmd/entra/pim/pim-role-assignment-add.mdx) - requests activation of an Entra role assignment for a user or group [#5766](https://github.com/pnp/cli-microsoft365/issues/5766)
-- [entra pim role assignment list](../cmd/entra/pim/pim-role-assignment-list.mdx) - retrieves a list of Entra role assignments for a user or group. [#5782](https://github.com/pnp/cli-microsoft365/issues/5782)
+- [entra pim role assignment list](../cmd/entra/pim/pim-role-assignment-list.mdx) - retrieves a list of Entra role assignments for a user or group [#5782](https://github.com/pnp/cli-microsoft365/issues/5782)
 
 **SharePoint:**
 
