Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -8,6 +8,10 @@ sidebar_position: 4
 
 ### New commands
 
+**SharePoint:**
+
+- [spo listitem batch remove](../cmd/spo/listitem/listitem-batch-remove.mdx) - removes items from a list in batch [#5688](https://github.com/pnp/cli-microsoft365/issues/5688)
+
 ### Changes
 
 - refactored spo util codebase to async/await [#5079](https://github.com/pnp/cli-microsoft365/issues/5079)
@@ -20,6 +24,11 @@ sidebar_position: 4
 - fixed [setup](../cmd/setup.mdx) command for setting wrong config key in interactive mode [#5951](https://github.com/pnp/cli-microsoft365/issues/5951)
 - enhanced [entra m365group add](../cmd/entra/m365group/m365group-add.mdx) command by making option 'description' optional [#5930](https://github.com/pnp/cli-microsoft365/issues/5930)
 - enhanced [outlook message list](../cmd/outlook/message/message-list.mdx) command extra options [#5872](https://github.com/pnp/cli-microsoft365/issues/5872)
+- added more validation output with invalid arrays. [#5834](https://github.com/pnp/cli-microsoft365/issues/5834)
+- modified help output in case of errors. [#5341](https://github.com/pnp/cli-microsoft365/issues/5341)
+- added appName option to 'entra app permission add/list' commands. [#5786](https://github.com/pnp/cli-microsoft365/issues/5786)
+- added interactivity for planner commands. [#5902](https://github.com/pnp/cli-microsoft365/issues/5902)
+- removed trailing slashes from 'spo get'
 
 ## [v7.7.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.7.0)
 
