--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -15,20 +15,23 @@ sidebar_position: 4
 ### Changes
 
 - refactored spo util codebase to async/await [#5079](https://github.com/pnp/cli-microsoft365/issues/5079)
-- added web as possible choice for setting helpTarget [#4037](https://github.com/pnp/cli-microsoft365/issues/4037)
+- added web as a possible choice for setting 'helpTarget' [#4037](https://github.com/pnp/cli-microsoft365/issues/4037)
 - updated workflow actions [#5978](https://github.com/pnp/cli-microsoft365/issues/5978)
-- enhanced 'flow run list' with 'withTrigger' option [#5160](https://github.com/pnp/cli-microsoft365/issues/5160)
-- refactors importing of chalk [#6026](https://github.com/pnp/cli-microsoft365/issues/6026)
+- enhanced [flow run list](../cmd/flow/run/run-list.mdx) with 'withTrigger' option [#5160](https://github.com/pnp/cli-microsoft365/issues/5160)
+- refactored importing of chalk [#6026](https://github.com/pnp/cli-microsoft365/issues/6026)
 - fixed bug while removing team sites for [spo site remove](../cmd/spo/site/site-remove.mdx) command [#5218](https://github.com/pnp/cli-microsoft365/issues/5218)
 - fixed spinner showing in update notification [#6020](https://github.com/pnp/cli-microsoft365/issues/6020)
 - fixed [setup](../cmd/setup.mdx) command for setting wrong config key in interactive mode [#5951](https://github.com/pnp/cli-microsoft365/issues/5951)
 - enhanced [entra m365group add](../cmd/entra/m365group/m365group-add.mdx) command by making option 'description' optional [#5930](https://github.com/pnp/cli-microsoft365/issues/5930)
-- enhanced [outlook message list](../cmd/outlook/message/message-list.mdx) command extra options [#5872](https://github.com/pnp/cli-microsoft365/issues/5872)
-- added more validation output with invalid arrays. [#5834](https://github.com/pnp/cli-microsoft365/issues/5834)
-- modified help output in case of errors. [#5341](https://github.com/pnp/cli-microsoft365/issues/5341)
-- added appName option to 'entra app permission add/list' commands. [#5786](https://github.com/pnp/cli-microsoft365/issues/5786)
-- added interactivity for planner commands. [#5902](https://github.com/pnp/cli-microsoft365/issues/5902)
-- removed trailing slashes from 'spo get'
+- enhanced [outlook message list](../cmd/outlook/message/message-list.mdx) command with extra options [#5872](https://github.com/pnp/cli-microsoft365/issues/5872)
+- added more validation output with invalid arrays [#5834](https://github.com/pnp/cli-microsoft365/issues/5834)
+- modified help output in case of errors [#5341](https://github.com/pnp/cli-microsoft365/issues/5341)
+- added appName option to 'entra app permission add/list' commands [#5786](https://github.com/pnp/cli-microsoft365/issues/5786)
+- added interactivity for planner commands [#5902](https://github.com/pnp/cli-microsoft365/issues/5902)
+- removed trailing slashes from [spo get](../cmd/spo/spo-get.mdx)
+- extended [spfx project upgrade](../cmd/spfx/project/project-upgrade.mdx) with support for v1.19.0[#6010](https://github.com/pnp/cli-microsoft365/issues/6010)
+- extended [spfx doctor](../cmd/spfx/spfx-doctor.mdx) with support for v1.19.0 [#6010](https://github.com/pnp/cli-microsoft365/issues/6010)
+- extended [spfx project doctor](../cmd/spfx/project/project-doctor.mdx) with support for v1.19.0 [#6010](https://github.com/pnp/cli-microsoft365/issues/6010)
 
 ## [v7.7.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.7.0)
 
