Minor change to doc updating trail to trial

--- a/docs/docs/cmd/spe/containertype/containertype-add.mdx
+++ b/docs/docs/cmd/spe/containertype/containertype-add.mdx
@@ -25,13 +25,13 @@ m365 spe containertype add [options]
 : Specify if the Container Type should be a trial.
 
 `--azureSubscriptionId [azureSubscriptionId]`
-: Azure Subscription Id. Required unless the `trail` option was specified.
+: Azure Subscription Id. Required unless the `trial` option was specified.
 
 `--resourceGroup [resourceGroup]`
-: Azure Resource group for billing. Required unless the `trail` option was specified.
+: Azure Resource group for billing. Required unless the `trial` option was specified.
 
 `--region [region]`
-: Region. Required unless the `trail` option was specified.
+: Region. Required unless the `trial` option was specified.
 ```
 
 <Global />
