Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,13 @@ sidebar_position: 4
 
 # Release notes
 
+## v7.8.1 (beta)
+
+### Changes
+
+- fixed documentation typo in 'containertype add' command [#6040](https://github.com/pnp/cli-microsoft365/issues/6040)
+- fixed logging in with client certificate [#6038](https://github.com/pnp/cli-microsoft365/issues/6038)
+
 ## [v7.8.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.8.0)
 
 ### New commands
