update doc for container types

--- a/docs/docs/cmd/spe/containertype/containertype-list.mdx
+++ b/docs/docs/cmd/spe/containertype/containertype-list.mdx
@@ -45,20 +45,20 @@ m365 Container Types list
     "ResourceGroup": null,
     "SPContainerTypeBillingClassification": 0
   },
-  {
+   {
     "_ObjectType_": "Microsoft.Online.SharePoint.TenantAdministration.SPContainerTypeProperties",
     "ApplicationRedirectUrl": null,
     "AzureSubscriptionId": "/Guid(00000000-0000-0000-0000-000000000000)/",
-    "ContainerTypeId": "/Guid(880ab3bd-5b68-01d4-3744-01a7656cf2ba)/",
+    "ContainerTypeId": "/Guid(3ec7c59d-ef31-0752-1ab5-5c343a5e8557)/",
     "CreationDate": null,
-    "DisplayName": "test1",
+    "DisplayName": "SharePoint Embedded Free Trial Container Type",
     "ExpiryDate": null,
     "IsBillingProfileRequired": true,
-    "OwningAppId": "/Guid(50785fde-3082-47ac-a36d-06282ac5c7da)/",
+    "OwningAppId": "/Guid(e6b529fe-84db-412a-8e9c-5bbb75f7b037)/",
     "OwningTenantId": "/Guid(00000000-0000-0000-0000-000000000000)/",
     "Region": null,
     "ResourceGroup": null,
-    "SPContainerTypeBillingClassification": 0
+    "SPContainerTypeBillingClassification": 1
   }]
   ```
 
@@ -66,25 +66,55 @@ m365 Container Types list
   <TabItem value="Text">
 
   ```text
-  
+  ContainerTypeId                             
+  --------------------------------------------
+  /Guid(880ab3bd-5b68-01d4-3744-01a7656cf2ba)/
+  /Guid(3ec7c59d-ef31-0752-1ab5-5c343a5e8557)/  
   ```
 
   </TabItem>
   <TabItem value="CSV">
 
   ```csv
-  
+  _ObjectType_,ApplicationRedirectUrl,AzureSubscriptionId,ContainerTypeId,CreationDate,DisplayName,ExpiryDate,IsBillingProfileRequired,OwningAppId,OwningTenantId,Region,ResourceGroup,SPContainerTypeBillingClassification
+  Microsoft.Online.SharePoint.TenantAdministration.SPContainerTypeProperties,,/Guid(00000000-0000-0000-0000-000000000000)/,/Guid(073269af-f1d2-042d-2ef5-5bdd6ac83115)/,,test1,,1,/Guid(df4085cc-9a38-4255-badc-5c5225610475)/,/Guid(00000000-0000-0000-0000-000000000000)/,,,0
+  Microsoft.Online.SharePoint.TenantAdministration.SPContainerTypeProperties,,/Guid(00000000-0000-0000-0000-000000000000)/,/Guid(3ec7c59d-ef31-0752-1ab5-5c343a5e8557)/,,SharePoint Embedded Free Trial Container Type,,1,/Guid(e6b529fe-84db-412a-8e9c-5bbb75f7b037)/,/Guid(00000000-0000-0000-0000-000000000000)/,,,1
   ```
 
   </TabItem>
   <TabItem value="Markdown">
 
+  # spe containertype list 
+
+  Date: 5/11/2024
+
+  ## test1
+
+  Property | Value
+  ---------|-------
+  \_ObjectType\_ | Microsoft.Online.SharePoint.TenantAdministration.SPContainerTypeProperties
+  AzureSubscriptionId | /Guid(00000000-0000-0000-0000-000000000000)/
+  ContainerTypeId | /Guid(073269af-f1d2-042d-2ef5-5bdd6ac83115)/
+  DisplayName | test1
+  IsBillingProfileRequired | true
+  OwningAppId | /Guid(df4085cc-9a38-4255-badc-5c5225610475)/
+  OwningTenantId | /Guid(00000000-0000-0000-0000-000000000000)/
+  SPContainerTypeBillingClassification | 0
+
+  ## SharePoint Embedded Free Trial Container Type
+
+  Property | Value
+  ---------|-------
+  \_ObjectType\_ | Microsoft.Online.SharePoint.TenantAdministration.SPContainerTypeProperties
+  AzureSubscriptionId | /Guid(00000000-0000-0000-0000-000000000000)/
+  ContainerTypeId | /Guid(3ec7c59d-ef31-0752-1ab5-5c343a5e8557)/
+  DisplayName | SharePoint Embedded Free Trial Container Type
+  IsBillingProfileRequired | true
+  OwningAppId | /Guid(e6b529fe-84db-412a-8e9c-5bbb75f7b037)/
+  OwningTenantId | /Guid(00000000-0000-0000-0000-000000000000)/
+  SPContainerTypeBillingClassification | 1
   ```md
-  # Container Types list
 
-  Date: 2023-05-22
-
-  
   </TabItem>
 </Tabs>
 
