update to doc to fix the md

--- a/docs/docs/cmd/spe/containertype/containertype-list.mdx
+++ b/docs/docs/cmd/spe/containertype/containertype-list.mdx
@@ -84,6 +84,7 @@ m365 Container Types list
   </TabItem>
   <TabItem value="Markdown">
 
+  ```md
   # spe containertype list 
 
   Date: 5/11/2024
@@ -118,3 +119,12 @@ m365 Container Types list
   </TabItem>
 </Tabs>
 
+## More information
+
+In SharePoint Embedded, all files and documents are stored in Containers, and each Container is identified by a Container Type.
+
+Container Type is a property stamped on every Container instance. Each Container Type is owned by one Application, and each Application can own only one Container Type.
+
+The primary function of a Container Type is to manage the application workload that can access the Containers. Container Type defines the access permissions an Application has towards all Containers of that type, including create, read, write, delete containers; manage container permissions, etc.
+
+More information about SharePoint Embedded and the limits can be found at the following location: [SharePoint Embedded](https://learn.microsoft.com/en-us/sharepoint/dev/embedded/concepts/app-concepts/containertypes#sharepoint-embedded-trial-container-types)
