--- a/docs/docs/cmd/spe/containertype/containertype-list.mdx
+++ b/docs/docs/cmd/spe/containertype/containertype-list.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # Container Types list
 
-Retrieves a list of Container Types sites
+Retrieves a list of Container Types created for a SharePoint Embedded Application
 
 ## Usage
 
@@ -18,7 +18,7 @@ m365 Container Types list [options]
 
 ## Examples
 
-Retrieves a list of Container Types sites from the tenant.
+Retrieves a list of Container Types created for a SharePoint Embedded Application from the tenant.
 
 ```sh
 m365 Container Types list
