--- a/docs/docs/about/team.mdx
+++ b/docs/docs/about/team.mdx
@@ -49,6 +49,12 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
     x: 'martinlingstuyl'
   },
   {
+    name: 'Mathijs Verbeeck',
+    company: 'Xylos',
+    github: 'MathijsVerbeeck',
+    x: 'mathijsverbeeck'
+  },
+  {
     name: 'Milan Holemans',
     company: 'Xylos',
     github: 'milanholemans',
