Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -8,7 +8,7 @@ sidebar_position: 4
 
 ### Changes
 
-- fixed documentation typo in 'containertype add' command [#6040](https://github.com/pnp/cli-microsoft365/issues/6040)
+- fixed documentation typo for [spe containertype add](../cmd/spe/containertype/containertype-add) command [#6040](https://github.com/pnp/cli-microsoft365/issues/6040)
 - fixed logging in with client certificate [#6038](https://github.com/pnp/cli-microsoft365/issues/6038)
 
 ## [v7.8.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.8.0)
@@ -35,8 +35,8 @@ sidebar_position: 4
 - modified help output in case of errors [#5341](https://github.com/pnp/cli-microsoft365/issues/5341)
 - added appName option to 'entra app permission add/list' commands [#5786](https://github.com/pnp/cli-microsoft365/issues/5786)
 - added interactivity for planner commands [#5902](https://github.com/pnp/cli-microsoft365/issues/5902)
-- removed trailing slashes from [spo get](../cmd/spo/spo-get.mdx)
-- extended [spfx project upgrade](../cmd/spfx/project/project-upgrade.mdx) with support for v1.19.0[#6010](https://github.com/pnp/cli-microsoft365/issues/6010)
+- removed trailing slashes from [spo get](../cmd/spo/spo-get.mdx) [#5929](https://github.com/pnp/cli-microsoft365/pull/5929)
+- extended [spfx project upgrade](../cmd/spfx/project/project-upgrade.mdx) with support for v1.19.0 [#6010](https://github.com/pnp/cli-microsoft365/issues/6010)
 - extended [spfx doctor](../cmd/spfx/spfx-doctor.mdx) with support for v1.19.0 [#6010](https://github.com/pnp/cli-microsoft365/issues/6010)
 - extended [spfx project doctor](../cmd/spfx/project/project-doctor.mdx) with support for v1.19.0 [#6010](https://github.com/pnp/cli-microsoft365/issues/6010)
 
